[project]
name = "cloudbalancer-stress"
version = "0.1.0"
description = "Stress-test CLI for a running CloudBalancer deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
cloudbalancer-stress = "cloudbalancer_stress.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudbalancer_stress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
